marlin/sailfish: set CONFIG_HZ to 300.
Change-Id: Ibe2a51013fae153c688a5b1220d73a7effca9690

--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -39,6 +39,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_HTC_POWER_DEBUG=y
 CONFIG_PREEMPT=y
+CONFIG_HZ_300=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_ZSMALLOC=y
