arm/dt: swordfish: Configure PMIC GPIO_4 to alternative SLEEP_CLK
Sensor hub needs SLEEP_CLK input. In PM8916, GPIO_4 can also be used as
SLEEP_CLK output special function if OPT2 is not grounded.

Bug: 28674795
Change-Id: I344a2029088689a7b579964fa7d3e6095c1af93d
Signed-off-by: kinam119.kim <kinam119.kim@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
@@ -102,8 +102,12 @@
 	};
 
 	gpio@c300 { /* GPIO 4 */
-		/* External regulator control for APC */
-		status = "disabled";
+		/* alternative sleep_clk for sensor hub */
+		qcom,mode = <1>;    /* QPNP_PIN_MODE_DIG_OUT */
+		qcom,pull = <5>;    /* QPNP_PIN_GPIO_PULL_NO */
+		qcom,vin-sel = <3>; /* QPNP_PIN_VIN3(VREG_L5)*/
+		qcom,src-sel = <2>; /* SPECIAL_FUNC_1(0x4) */
+		qcom,master-en = <1>;
 	};
 };
 
