arm/dt: swordfish: Disable HS200 from SDC
We disable HS200 temporarily until we get a fine tune for eMMC

Bug: 28665377
Change-Id: Ibc216380a1971c00afe90de7ee7689bc8a52ea07
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish.dtsi
@@ -168,7 +168,9 @@
 	pinctrl-0 = <&sdc1_clk_on &sdc1_cmd_on &sdc1_data_on>;
 	pinctrl-1 = <&sdc1_clk_off &sdc1_cmd_off &sdc1_data_off>;
 
-	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
+	/* TODO: we need a fine tune for eMMC
+	   qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v"; */
+	qcom,bus-speed-mode = "DDR_1p8v";
 	qcom,nonremovable;
 
 	status = "ok";
