--- a/arch/arm/configs/catshark_defconfig
+++ b/arch/arm/configs/catshark_defconfig
@@ -266,6 +266,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_IT7259_I2C=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=m
@@ -517,3 +518,4 @@ CONFIG_SERIAL_MSM_HS=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
+CONFIG_FRAME_WARN=2048
