--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1150,4 +1150,16 @@ config TOUCHSCREEN_HIMAX_CHIPSET
 
 source "drivers/input/touchscreen/hxchipset/Kconfig"
 
+config TOUCHSCREEN_IT7259_I2C
+        tristate "IT7259 Touchscreen Driver"
+        depends on I2C
+        help
+          Say Y here if you have a IT7259 Touchscreen Driver
+          connected to your system.
+
+          If unsure, say N.
+
+          To compile this driver as a module, choose M here: the
+          module will be called it7259_ts_i2c.
+
 endif
