ARM: dts: floral: enable partial update
Add parital update ROI requirements for Flame and Coral displays and
enable the feature to reduce traffic when only small portions of
display is being updated.

Bug: 117411688
Change-Id: I4cd1c5b2e92e98260a8efa6f655cee9d8451f6f9
Signed-off-by: Adrian Salido <salidoa@google.com>

--- a/arch/arm64/boot/dts/google/dsi-panel-nt37280-dsc-fhd-cmd.dtsi
+++ b/arch/arm64/boot/dts/google/dsi-panel-nt37280-dsc-fhd-cmd.dtsi
@@ -139,6 +139,9 @@
 				/* 2xLM, 2xDSC Enc, 1xDSI Intf */
 				qcom,display-topology = <2 2 1>;
 				qcom,default-topology-index = <0>;
+
+				qcom,panel-roi-alignment = <1080 20 1080 20 1080 20>;
+				qcom,partial-update-enabled = "single_roi";
 			};
 
 			timing@1 {
@@ -231,6 +234,9 @@
 				/* 2xLM, 2xDSC Enc, 1xDSI Intf */
 				qcom,display-topology = <2 2 1>;
 				qcom,default-topology-index = <0>;
+
+				qcom,panel-roi-alignment = <1080 20 1080 20 1080 20>;
+				qcom,partial-update-enabled = "single_roi";
 			};
 		};
 
