arm64: dtsi: Control Max77826 Buck/Buck-boost by camera
1.Add Buck/Buck-boost into camera's regualtor supply.
2.Support different voltage for different camera sensor.

Bug: 116608703
Bug: 117938028
Bug: 117936575
Test: Camera basic function, Power measurement
Change-Id: Ifa20bf86acb270f68e1d0fd0cbbab9b5ed9f094e
Signed-off-by: kocolin <kocolin@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-coral-camera-sensor.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-coral-camera-sensor.dtsi
@@ -196,12 +196,15 @@
 		reg = <0x3>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 0>;
-		rgltr-max-voltage = <0 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -231,12 +234,15 @@
 		reg = <0x4>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 0>;
-		rgltr-max-voltage = <0 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -272,14 +278,15 @@
 		eeprom-src = <&eeprom_ir1>;
 		cam_vio-supply = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo7>;
-		cam_vdig-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+		regulator-names = "cam_vio", "cam_vana",
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 2900000 1900000 0>;
-		rgltr-max-voltage = <0 2900000 1900000 0>;
-		rgltr-load-current = <0 2900000 1900000 0>;
+		rgltr-min-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-max-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -314,14 +321,15 @@
 		eeprom-src = <&eeprom_ir2>;
 		cam_vio-supply = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo7>;
-		cam_vdig-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+		regulator-names = "cam_vio", "cam_vana",
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 2900000 1900000 0>;
-		rgltr-max-voltage = <0 2900000 1900000 0>;
-		rgltr-load-current = <0 2900000 1900000 0>;
+		rgltr-min-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-max-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -364,8 +372,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -378,8 +386,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -392,13 +400,18 @@
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
 		cam_v_custom1-supply = <&max77826_ldo9>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_v_custom1", "cam_clk";
+			"cam_vaf", "cam_v_custom1", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 3000000 1800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 3000000 1800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -432,8 +445,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -446,8 +459,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -459,13 +472,17 @@
 		cam_vana-supply = <&max77826_ldo5>;
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_clk";
+			"cam_vaf", "cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -495,12 +512,15 @@
 		reg = <0x2>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 0>;
-		rgltr-max-voltage = <1800000 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
@@ -542,13 +562,18 @@
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
 		cam_v_custom1-supply = <&max77826_ldo9>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_v_custom1", "cam_clk";
+			"cam_vaf", "cam_v_custom1", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 1800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 1800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -588,13 +613,17 @@
 		cam_vana-supply = <&max77826_ldo5>;
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_clk";
+			"cam_vaf", "cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -629,13 +658,17 @@
 		cam_vio-supply  = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo8>;
 		cam_vdig-supply = <&max77826_ldo3>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply  = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage  = <1800000 2800000 1050000 0>;
-		rgltr-max-voltage  = <1800000 2800000 1050000 0>;
-		rgltr-load-current = <0 0 0 0>;
+		rgltr-min-voltage  = <1800000 2800000 1050000
+			1350000 3300000 0>;
+		rgltr-max-voltage  = <1800000 2800000 1050000
+			1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
