--- a/arch/arm64/boot/dts/google/sm8150-flame-camera-sensor.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-flame-camera-sensor.dtsi
@@ -198,12 +198,15 @@
 		reg = <0x3>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 0>;
-		rgltr-max-voltage = <0 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -233,12 +236,15 @@
 		reg = <0x4>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 0>;
-		rgltr-max-voltage = <0 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -274,14 +280,15 @@
 		eeprom-src = <&eeprom_ir1>;
 		cam_vio-supply = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo7>;
-		cam_vdig-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+		regulator-names = "cam_vio", "cam_vana",
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 2900000 1900000 0>;
-		rgltr-max-voltage = <0 2900000 1900000 0>;
-		rgltr-load-current = <0 2900000 1900000 0>;
+		rgltr-min-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-max-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -316,14 +323,15 @@
 		eeprom-src = <&eeprom_ir2>;
 		cam_vio-supply = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo7>;
-		cam_vdig-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+		regulator-names = "cam_vio", "cam_vana",
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <0 2900000 1900000 0>;
-		rgltr-max-voltage = <0 2900000 1900000 0>;
-		rgltr-load-current = <0 2900000 1900000 0>;
+		rgltr-min-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-max-voltage = <1900000 2900000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
@@ -366,8 +374,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -380,8 +388,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -394,13 +402,18 @@
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
 		cam_v_custom1-supply = <&max77826_ldo9>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_v_custom1", "cam_clk";
+			"cam_vaf", "cam_v_custom1", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1100000 3000000 1850000 0>;
-		rgltr-max-voltage = <1800000 2800000 1100000 3000000 1850000 0>;
-		rgltr-load-current = <0 80000 105000 80000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -434,8 +447,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -448,8 +461,8 @@
 		cam_vaf-supply = <&max77826_ldo12>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <3000000>;
-		rgltr-max-voltage = <3000000>;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
 		rgltr-load-current = <80000>;
 	};
 
@@ -461,13 +474,17 @@
 		cam_vana-supply = <&max77826_ldo5>;
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_clk";
+			"cam_vaf", "cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -497,12 +514,15 @@
 		reg = <0x2>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&max77826_ldo11>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
-		regulator-names = "cam_vio", "cam_clk";
+		regulator-names = "cam_vio", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 0>;
-		rgltr-max-voltage = <1800000 0>;
-		rgltr-load-current = <0 0>;
+		rgltr-min-voltage = <1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
@@ -544,13 +564,18 @@
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
 		cam_v_custom1-supply = <&max77826_ldo9>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_v_custom1", "cam_clk";
+			"cam_vaf", "cam_v_custom1", "cam_v_custom3",
+			"cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 1800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 1800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -590,13 +615,17 @@
 		cam_vana-supply = <&max77826_ldo5>;
 		cam_vdig-supply = <&max77826_ldo1>;
 		cam_vaf-supply = <&max77826_ldo12>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_vaf", "cam_clk";
+			"cam_vaf", "cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-max-voltage = <1800000 2800000 1050000 2800000 0>;
-		rgltr-load-current = <0 80000 105000 80000 0>;
+		rgltr-min-voltage = <1800000 2800000 1050000
+			2800000 1350000 3300000 0>;
+		rgltr-max-voltage = <1800000 2800000 1050000
+			2800000 1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk2_active
@@ -631,13 +660,17 @@
 		cam_vio-supply  = <&max77826_ldo11>;
 		cam_vana-supply = <&max77826_ldo8>;
 		cam_vdig-supply = <&max77826_ldo3>;
+		cam_v_custom3-supply = <&max77826_buck1>;
+		cam_v_custom4-supply = <&max77826_buck2>;
 		cam_clk-supply  = <&titan_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
-			"cam_clk";
+			"cam_v_custom3", "cam_v_custom4", "cam_clk";
 		rgltr-cntrl-support;
-		rgltr-min-voltage  = <1800000 2800000 1050000 0>;
-		rgltr-max-voltage  = <1800000 2800000 1050000 0>;
-		rgltr-load-current = <0 0 0 0>;
+		rgltr-min-voltage  = <1800000 2800000 1050000
+			1350000 3300000 0>;
+		rgltr-max-voltage  = <1800000 2800000 1050000
+			1350000 4100000 0>;
+		rgltr-load-current = <0 0 0 0 0 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
